Merge pull request #15736 from KomachiSion/codex/rad-agent-search-index
feat(ai): add canonical Agent search indexing